@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11076] "Samling af valideringsfunktionalitet for plugins"
    - bug [11104] "NaiveJavaScriptWrapper ser ikke ud til at blive brugt længere"
    - bug [10507] "PluginClassLoader virker overflødig"
    - bug [10570] "testbug"
